--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
     <title>Merry Christmas!</title>
 </head>
 <body>
-    
+    <div class="window">
+            <div class="santa">
+                <div class="head">
+                    <div class="face">
+                        <div class="redhat">
+                            <div class="whitepart"></div>
+                            <div class="redpart"></div>
+                            <div class="hatball"></div>
+                        </div>
+                        <div class="eyes"></div>
+                        <div class="beard">
+                            <div class="nouse"></div>
+                            <div class="mouth"></div>
+                        </div>
+                    </div>
+                    <div class="ears"></div>
+                </div>
+                <div class="body"></div>
+            </div>
+    </div>
     <svg viewport="0 0 300 300">
       <text class="Merry" x="150" y="50">Merry</text>
       <text class="Christmas" x="150" y="120">Christmas</text>
