added second page

--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
     </div>
     <div class="Love">
       <div class="Love-heart">❤</div>
-      <div class="Love-text"> <a href="gifton.io/chinne/present">open your present!</a></div>
+      <div class="Love-text"> <a href="present/index.html">open your present!</a></div>
     </div>
 </body>
