--- a/present/index.html
+++ b/present/index.html
@@ -43,9 +43,10 @@
         <figure class="top"></figure>
         <figure class="bottom"></figure>
         <div id="package">
-          My package
+          picking out a gift for you is fun, but shopping with you is funner, so lets go!
         </div>
       </div>
     </div>
+      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src = "../js/main.js"></script>
 </body>
